# clipimg-for-wsl2

./: CHANGELOG.md  LICENSE  README.md  plan0407_v1.md
.github/: release-body.md
.github/workflows/: release.yml
clipimg-app/: Cargo.toml  build.rs  config.example.json  resource.rc
clipimg-app/.cargo/: config.toml
clipimg-app/assets/: README.md
clipimg-app/examples/: convert_icon.rs  gen_icon.rs
clipimg-app/src/: clipboard.rs  clipboard_listener.rs  config.rs  first_run.rs  input.rs  logger.rs  main.rs
plans/: plan0407_v1.md  plans_v1.0.1.md  plans_v1.0.2.md  plans_v1.0.3.md  plans_v1.0.4.md  plans_v1.0.5.md  plans_v1.0.6.md  plans_v1.0.7.md  plans_v1.0.8.md  todo.md  v1.0.11.md  v1.0.12.md  v1.0.9.md
plans/v1.0.6_review/: reviewByGpt5.4.md  reviewByOpus4.6.md
scripts/: clipimg
shell-integration/: clip-paste.bash
windows-setup/: clipboard-watcher.ps1  paste-image-path-v1.ahk  paste-image-path.ahk  start-daemon.ps1  stop-daemon.ps1
