[package]
name = "clipimg"
version = "1.0.7"
edition = "2021"
description = "Clipboard image watcher + hotkey paste tool for Docker/WSL2 workflows"

[dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
md-5 = "0.10"
log = { version = "0.4", features = ["std"] }

# Windows-only 依赖
[target.'cfg(target_os = "windows")'.dependencies]
arboard = "3"
global-hotkey = "0.7"
tray-icon = "0.22"
muda = "0.17"
windows-sys = { version = "0.60", features = [
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Threading",
    "Win32_Security",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_System_Registry",
    "Win32_System_IO",
    "Win32_System_SystemInformation",
    "Win32_Storage_FileSystem",
    "Win32_UI_Shell",
] }

[features]
default = []
console = []

[dev-dependencies]
tempfile = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
